# BeeEye

./: .editorconfig  .env.example  .gitignore  BeeEye.slnx  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  visual-baselines.yml
docs/: investor-brief.md
docs/adr/: 0001-modular-monolith.md  0002-technology-stack.md  0003-operational-database-postgres.md  0004-ai-provider-abstraction.md  0005-oracle-anti-corruption-layer.md  0006-recommendation-decision-workflow.md  0007-idempotency-and-replay.md  0008-authentication-and-authorization.md
docs/architecture/: ai-provider-abstraction.md  api-design.md  canonical-data-model.md  data-integration-and-quality.md  deployment-and-ip-protection.md  idempotency-and-reliability.md  mlops-and-models.md  module-boundaries.md  observability.md  overview.md  security-threat-model.md  tech-debt.md
docs/implementation/: v3-baseline.md  v3-design-inventory.md  v3-design-traceability.md  v3-gap-analysis.md  v3-progress.md  (+3 more)
infra/: README.md  main.bicep
ml/: README.md  pyproject.toml
ml/beeeye_ml/: __init__.py
ml/beeeye_ml/after_sales/: __init__.py
ml/beeeye_ml/common/: __init__.py  metrics.py
ml/beeeye_ml/forecasting/: __init__.py  baselines.py
ml/beeeye_ml/inventory_aging/: __init__.py  risk.py
ml/beeeye_ml/order_optimisation/: __init__.py
ml/beeeye_ml/procurement/: __init__.py
ml/beeeye_ml/spare_parts/: __init__.py
ml/tests/: test_metrics.py  test_models.py
tests/: README.md
(+431 files in other folders)
