[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beeeye-ml"
version = "0.1.0"
description = "BeeEye platform ML and statistical workloads (batch training and scoring jobs)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Full intended stack for real training/scoring jobs. The seed modules and tests
# in this scaffold use only the standard library, so `import beeeye_ml` works
# before these are installed.
dependencies = [
    "pandas>=2.2",
    "polars>=1.9",
    "pyarrow>=17.0",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "mlflow>=2.17",
    "shap>=0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["beeeye_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
